# llmvm

./: .gitignore  Cargo.toml  README.md
backends/: README.md
backends/llama/: Cargo.toml
backends/llama-cli/: Cargo.toml
backends/llama-cli/src/: main.rs
backends/llama/src/: lib.rs  task.rs
backends/llmrs/: Cargo.toml  README.md
backends/llmrs-cli/: Cargo.toml
backends/llmrs-cli/src/: main.rs
backends/llmrs-lib/: Cargo.toml  README.md
backends/llmrs-lib/src/: lib.rs  model.rs
backends/llmrs/src/: lib.rs  main.rs  model.rs  task.rs
backends/outsource/: Cargo.toml  README.md
backends/outsource-cli/: Cargo.toml
backends/outsource-cli/src/: main.rs
backends/outsource-lib/: Cargo.toml  README.md
backends/outsource-lib/src/: anthropic.rs  huggingface.rs  lib.rs  ollama.rs  openai.rs  util.rs
backends/outsource/src/: huggingface.rs  lib.rs  main.rs  openai.rs  util.rs
backends/util/: Cargo.toml
backends/util/src/: lib.rs
backends/utils/: Cargo.toml
core/: Cargo.toml  README.md
core-cli/: Cargo.toml
core-cli/src/: main.rs
core-lib/: Cargo.toml  README.md
core-lib/presets/: claude-3-5-sonnet-codechat.toml  claude-3-5-sonnet-codegen.toml  gpt-3.5-chat.toml  gpt-3.5-codegen.toml  gpt-3.5-comment-revise.toml  gpt-3.5-commentgen.toml  gpt-4-chat.toml  gpt-4-turbo-chat.toml  gpt-4-turbo-codegen.toml  gpt-4o-chat.toml  gpt-4o-codegen.toml  gpt2-codegen.toml  wizardcoder-15b-q5.toml
core-lib/prompts/: codechat.hbs  comment-revise.hbs  commentgen.hbs  simple-math-chat.hbs  wizardcoder-15b-codegen.hbs
core-lib/src/: error.rs  generation.rs  lib.rs  presets.rs  prompts.rs  service.rs  sessions.rs  threads.rs  tools.rs
core/examples/: main.rs
core/presets/: gpt-4-codegen.toml
core/prompts/: codegen.hbs
core/src/: generation.rs  lib.rs  main.rs  util.rs
frontends/: README.md
frontends/chat/: Cargo.toml  README.md
frontends/chat/src/: main.rs
frontends/codeassist/: Cargo.toml  README.md
frontends/codeassist/src/: actions.rs  adapter.rs  complete.rs  content.rs  interceptor.rs  jsonrpc.rs  lsp.rs  main.rs  passthrough.rs  service.rs  session.rs  snippet.rs  tools.rs  util.rs
frontends/codeassist/src/complete/: apply.rs  mod.rs  notify.rs  processing.rs  symbols.rs  typedefs.rs
misc/: hosting-scenarios.drawio
proto/: Cargo.toml
proto/src/: lib.rs
protocol/: Cargo.toml  README.md
protocol/src/: http.rs  jsonrpc.rs  lib.rs  service.rs  services.rs  stdio.rs  util.rs
util/: Cargo.toml
util/src/: lib.rs
