[workspace]
members = [
  "./backends/llmrs",
  "./backends/llmrs-cli",
  "./backends/outsource",
  "./backends/outsource-cli",
  "./core",
  "./core-cli",
  "./frontends/chat",
  "./frontends/codeassist",
  "./util"
]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
futures = "0.3"
multilink = { version = "1.0", path = "../multilink" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = "1.29"
tracing = "0.1"
