[workspace]
members = [
  "./backends/llmrs",
  "./backends/llmrs-lib",
  "./backends/outsource",
  "./backends/outsource-lib",
  "./core",
  "./core-lib",
  "./frontends/chat",
  "./frontends/codeassist",
  "./util"
]

[workspace.package]
authors = ["Darnell Andries <darnell@andries.ca>"]
repository = "https://github.com/djandries/llmvm"
license = "MPL-2.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
futures = "0.3"
multilink = { version = "1.0", path = "../multilink" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = "1.29"
tracing = "0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true