[package]
name = "llmvm-core-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
llmvm-core = { path = "../core" }
llmvm-protocol = { path = "../protocol", features = ["stdio"] }
llmvm-util = { path = "../util", features = ["config", "logging"] }
tokio = { version = "1.26", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
