[package]
name = "llmvm-core-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
llmvm-core = { path = "../core" }
llmvm-protocol = { path = "../protocol", features = ["http-server", "stdio-server"] }
llmvm-util = { path = "../util", features = ["config", "logging"] }
tokio = { workspace = true, features = ["rt", "macros"] }
serde = { workspace = true }
tracing = { workspace = true }
