[package]
name = "llmvm-core-lib"
version = "1.1.4"
edition = "2021"
description = "The library for the llmvm core application."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories = ["text-processing", "api-bindings"]
keywords = ["llm", "ai"]

[dependencies]
async-stream = "0.3"
futures = { workspace = true }
handlebars = "4.3"
llmvm-util = { version = "0.1", path = "../util" }
llmvm-protocol = { version = "2.0", path = "../protocol", features = ["stdio-client", "http-client"] }
notify = "7.0"
rand = { workspace = true }
rust-embed = "6.6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio = { workspace = true, features = ["fs"] }
toml = "0.7"
tracing = { workspace = true }
