[package]
name = "llmvm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
handlebars = "4.3"
llmvm-util = { path = "../util" }
llmvm-protocol = { path = "../protocol", features = ["stdio"] }
rand = "0.8"
rust-embed = "6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.27", features = ["fs"] }
toml = "0.7"
tracing = "0.1"
