[package]
name = "llmvm-core"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
llmvm-core-lib = { path = "../core-lib" }
llmvm-protocol = { path = "../protocol", features = ["http-server", "stdio-server"] }
llmvm-util = { path = "../util", features = ["config", "logging"] }
tokio = { workspace = true, features = ["rt", "macros"] }
serde = { workspace = true }
tracing = { workspace = true }
