[package]
name = "llmvm-core"
version = "1.1.3"
edition = "2021"
description = "The core application for llmvm."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories = ["text-processing", "api-bindings", "command-line-utilities"]
keywords = ["llm", "ai"]

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
llmvm-core-lib = { version = "1.0", path = "../core-lib" }
llmvm-protocol = { version = "2.0", path = "../protocol", features = ["http-server", "stdio-server"] }
llmvm-util = { version = "0.1", path = "../util", features = ["config", "logging"] }
tokio = { workspace = true, features = ["rt", "macros"] }
serde = { workspace = true }
tracing = { workspace = true }
