[package]
name = "llmvm-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = { workspace = true }
llmvm-util = { version = "0.1", path = "../util" }
serde = { workspace = true }
serde_json = { workspace = true }
multilink = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[features]
http-client = ["multilink/http-client"]
http-server = ["multilink/http-server"]
stdio-client = ["multilink/stdio-client"]
stdio-server = ["multilink/stdio-server"]