[package]
name = "llmvm-protocol"
version = "2.0.1"
edition = "2021"
description = "A library that contains protocol/communication elements for llmvm."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories = ["network-programming", "api-bindings", "data-structures"]
keywords = ["ipc", "http", "stdio", "jsonrpc", "llm"]

[dependencies]
async-trait = "0.1"
futures = { workspace = true }
llmvm-util = { version = "0.1", path = "../util" }
serde = { workspace = true }
serde_json = { workspace = true }
multilink = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
url = { workspace = true }

[features]
http-client = ["multilink/http-client"]
http-server = ["multilink/http-server"]
stdio-client = ["multilink/stdio-client"]
stdio-server = ["multilink/stdio-server"]

[package.metadata.docs.rs]
features = ["stdio-client", "stdio-server", "http-client", "http-server"]
