[package]
name = "llmvm-util"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.13", features = ["toml"], optional = true }
directories = "5.0"
multilink = { version = "1.0", path = "../../multilink" }
serde = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
logging = ["dep:tracing-subscriber"]
config = ["dep:config", "dep:serde"]
