[package]
name = "llmvm-util"
version = "0.1.1"
edition = "2021"
description = "Utility functions for llmvm."
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
config = { version = "0.13", features = ["toml"], optional = true }
directories = "5.0"
multilink = { version = "1.0", path = "../../multilink" }
serde = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
rand = { workspace = true }

[features]
logging = ["dep:tracing-subscriber"]
config = ["dep:config", "dep:serde"]

[package.metadata.docs.rs]
features = ["logging", "config"]
