[package]
name = "llmvm-llmrs-lib"
version = "1.0.0"
edition = "2021"
description = "The library for the llmrs backend for llmvm."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories = ["text-processing", "api-bindings"]
keywords = ["llama", "llm", "ai"]

[dependencies]
futures = { workspace = true }
llm = { git = "https://github.com/rustformers/llm", rev = "7f13bb90f678e2bdf70d221f1b790fab55cb4d7f" }
llmvm-protocol = { version = "1.0", path = "../../protocol" }
llmvm-util = { version = "0.1", path = "../../util" }
thiserror = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1"
tracing = { workspace = true }
