[package]
name = "llmvm-llmrs"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
llmvm-backend-util = { path = "../util" }
llmvm-llmrs-lib = { path = "../llmrs-lib" }
llmvm-protocol = { path = "../../protocol", features = ["http-server"] }
llmvm-util = { path = "../../util", features = ["config", "logging"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }