[package]
name = "llmvm-llmrs"
version = "1.0.0"
edition = "2021"
description = "A library that contains protocol/communication elements for llmvm."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories = ["text-processing", "api-bindings", "command-line-utilities"]
keywords = ["llama", "llm", "ai"]

[dependencies]
clap = { workspace = true }
llmvm-backend-util = { version = "0.1", path = "../util" }
llmvm-llmrs-lib = { version = "1.0", path = "../llmrs-lib" }
llmvm-protocol = { version = "1.0", path = "../../protocol", features = ["http-server"] }
llmvm-util = { version = "0.1", path = "../../util", features = ["config", "logging"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }