[package]
name = "llmvm-outsource-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
llmvm-backend-util = { path = "../util" }
llmvm-outsource = { path = "../outsource" }
llmvm-protocol = { path = "../../protocol", features = ["http-server"] }
llmvm-util = { path = "../../util", features = ["config"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.26", features = ["rt", "macros", "net"] }
