[package]
name = "llmvm-outsource-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
llmvm-backend-util = { path = "../util" }
llmvm-outsource = { path = "../outsource" }
llmvm-protocol = { path = "../../protocol", features = ["http-server"] }
llmvm-util = { path = "../../util", features = ["config"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "macros", "net"] }
