[package]
name = "llmvm-outsource-lib"
version = "1.0.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-stream = "0.3"
futures = { workspace = true }
llmvm-protocol = { version = "1.0", path = "../../protocol" }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
strum = "0.24"
strum_macros = "0.24"
