[package]
name = "llmvm-outsource-lib"
version = "1.2.0"
edition = "2021"
description = "The library for the outsource backend for llmvm."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories = ["text-processing", "api-bindings"]
keywords = ["llm", "ai", "openai", "huggingface"]

[dependencies]
async-stream = "0.3"
futures = { workspace = true }
llmvm-protocol = { version = "2.0", path = "../../protocol" }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
strum = "0.24"
strum_macros = "0.24"
