[package]
name = "llmvm-backend-util"
version = "0.1.0"
edition = "2021"
description = "Utility functions for llmvm backends."
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.1", features = ["derive"] }
llmvm-protocol = { version = "1.0", path = "../../protocol", features = ["http-server", "stdio-server"] }
serde_json = "1.0"
tracing = "0.1"
