[package]
name = "llmvm-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
futures = "0.3"
llmvm-protocol = { path = "../../protocol", features = ["stdio-client", "http-client"] }
llmvm-util = { path = "../../util", features = ["config"] }
rustyline = { version = "12.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
