[package]
name = "llmvm-chat"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
llmvm-protocol = { path = "../../protocol", features = ["stdio-client", "http-client"] }
llmvm-util = { path = "../../util", features = ["config"] }
rustyline = { version = "12.0", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
