[package]
name = "llmvm-chat"
version = "0.1.1"
edition = "2021"
description = "An llmvm frontend that acts as a CLI chat interface."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories = ["text-processing", "science", "command-line-utilities"]
keywords = ["llm", "ai", "chat"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
llmvm-protocol = { version = "2.0", path = "../../protocol", features = ["stdio-client", "http-client"] }
llmvm-util = { version = "0.1", path = "../../util", features = ["config"] }
rustyline = { version = "12.0", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
