[package]
name = "llmvm-codeassist"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
llmvm-protocol = { path = "../../protocol", features = ["stdio-client", "http-client"] }
llmvm-util = { path = "../../util", features = ["config", "logging"] }
lsp-types = "0.94"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["buffer", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.3"