[package]
name = "llmvm-codeassist"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
llmvm-protocol = { version = "1.0", path = "../../protocol", features = ["stdio-client", "http-client"] }
llmvm-util = { version = "0.1", path = "../../util", features = ["config", "logging"] }
lsp-types = "0.94"
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { version = "0.4", features = ["buffer", "util"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.3"