[package]
name = "llmvm-codeassist"
version = "0.1.2"
edition = "2021"
description = "A LLM-powered code assistant that automatically retrieves context (i.e. type definitions) from a Language Server Protocol server."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories = ["text-processing", "science", "development-tools"]
keywords = ["llm", "ai", "code", "assistant", "lsp"]

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
llmvm-protocol = { version = "2.0", path = "../../protocol", features = ["stdio-client", "http-client"] }
llmvm-util = { version = "0.1", path = "../../util", features = ["config", "logging"] }
lsp-types = "0.94"
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { version = "0.4", features = ["buffer", "util"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.3"
